// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders the Button component correctly 1`] = `
<button
  className="sc-bgqQcB fgmEeA"
>
  Click me
</button>
`;

exports[`Button renders the primary variant of Button correctly 1`] = `
<button
  className="sc-bgqQcB cCxntC"
>
  Click me
</button>
`;
